--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
+    "cookies-next": "^5.1.0",
     "formik": "^2.4.6",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-select-country-list": "^2.2.3",
     "react-wavify": "^1.11.1",
     "swiper": "^11.2.5",
     "yup": "^1.6.1"
