--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
+    "@tailwindcss/vite": "^4.0.14",
     "cookies-next": "^5.1.0",
     "formik": "^2.4.6",
     "next": "15.2.2",
@@ -32,7 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
 }
